test/fail/enums_and_variants/variant_decl.lly
#[
SyntaxError: Variant types not allowed in a declaration.
Where: File "variant_decl.lly" at line 11
]#

enum class Option[A] {
	Some(A),
	None
}

var v: Some[integer] = Some(10)
